<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#828f99"
    tools:context="am.user.calkulyator.MainActivity">

    <EditText
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:gravity="right"
        android:inputType="numberDecimal"
        android:padding="30dp"
        tools:ignore="LabelFor" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/line1">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/button0"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:background="@drawable/button_clik"
            android:text="@string/hamar0"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonKet"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/button_clik"
            android:text="@string/Ket"
            android:textSize="40sp" />

        <Button
            android:id="@+id/buttonload"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/button_clik"
            android:text="@string/Load"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonHavasar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/button_clik"
            android:text="@string/Havasar"
            android:textSize="20sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/line1">

        <Button
            android:id="@+id/button1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/button_clik"
            android:text="@string/hamar1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/button_clik"
            android:text="@string/hamar2"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/button_clik"
            android:text="@string/hamar3"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonHanum"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/button_clik"
            android:text="@string/hamarHanum"
            android:textSize="20sp" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/line2">


        <Button
            android:id="@+id/button4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/button_clik"
            android:text="@string/hamar4"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/button_clik"
            android:text="@string/hamar5"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/button_clik"
            android:text="@string/hamar6"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonGumarum"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/button_clik"
            android:text="@string/hamarGumar"
            android:textSize="20sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/line3">

        <Button
            android:id="@+id/button7"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/button_clik"
            android:text="@string/hamar7"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/button_clik"
            android:text="@string/hamar8"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/button_clik"
            android:text="@string/hamar9"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonBaj"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/button_clik"
            android:text="@string/hamarBaj"
            android:textSize="20sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/line4">

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/button_clik"
            android:text="@string/Delete"
            android:textSize="20sp" />


        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/button_clik"
            android:contentDescription="@null"
            android:src="@drawable/ic_action_name" />


        <Button
            android:id="@+id/buttonMemory"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/button_clik"
            android:text="@string/memory"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonBazm"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/button_clik"
            android:text="@string/hamarBazm"
            android:textSize="20sp" />


    </LinearLayout>

</RelativeLayout>
